--- a/configs/NLVR_pretrain.yaml
+++ b/configs/NLVR_pretrain.yaml
@@ -1,8 +1,8 @@
-train_file: ['/export/home/project/VL/dataset/caption/coco_karpathy_train.json',
-               '/export/home/project/VL/dataset/caption/vg_caption.json',          
-               '/export/home/project/VL/dataset/pretrain_caption/conceptual_caption_train.json',
-               '/export/home/project/VL/dataset/pretrain_caption/conceptual_caption_val.json',
-               '/export/home/project/VL/dataset/pretrain_caption/sbu_caption.json'               
+train_file: ['data/coco.json',
+               'data/vg.json',
+               'data/cc3m_train.json',
+               'data/cc3m_val.json',
+               'data/sbu.json'               
                ]
 
 # each train_file (json) contains a python list where each item is {'image': img_path, 'caption': text or list_of_text }  
