--- a/configs/MVSA_demo.yaml
+++ b/configs/MVSA_demo.yaml
@@ -1,12 +1,12 @@
-data_root: '/home/docker/project/datasets/yelp'
+data_root: '/home/docker/project/datasets/mvsa_s'
 
-train_file: 'train_half.json'
+train_file: 'train.json'
 val_file: 'valid.json'                
 test_file: 'test.json'
 
 
 image_res: 384
-batch_size_train: 8
+batch_size_train: 32
 batch_size_test: 64 
 
 alpha: 0.4
@@ -17,14 +17,14 @@ bert_config: 'configs/config_bert.json'
 
 optimizer: {
   opt: adamW, 
-  lr: 2e-5, 
+  lr: 1e-5, 
   weight_decay: 0.03
 }
 
 schedular: {
   sched: cosine, 
-  lr: 2e-5, 
-  epochs: 20,
+  lr: 1e-5, 
+  epochs: 20, 
   min_lr: 1e-6, 
   decay_rate: 1, 
   warmup_lr: 1e-5, 
