--- a/configs/Yelp.yaml
+++ b/configs/Yelp.yaml
@@ -1,12 +1,12 @@
 data_root: '/home/docker/project/datasets/yelp'
 
-train_file: 'train_half.json'
+train_file: 'train.json'
 val_file: 'valid.json'                
 test_file: 'test.json'
 
 
 image_res: 384
-batch_size_train: 8
+batch_size_train: 4
 batch_size_test: 64 
 
 alpha: 0.4
@@ -14,21 +14,23 @@ distill: False
 warm_up: False
 
 bert_config: 'configs/config_bert.json'
+accumulation_steps: 8
 
 optimizer: {
   opt: adamW, 
-  lr: 2e-5, 
-  weight_decay: 0.03
+  lr: 1e-5, 
+  weight_decay: 0.01
 }
 
 schedular: {
-  sched: cosine, 
-  lr: 2e-5, 
-  epochs: 20,
+  sched: step, 
+  lr: 1e-5, 
+  epochs: 5,
   min_lr: 1e-6, 
-  decay_rate: 1, 
-  warmup_lr: 1e-5, 
-  warmup_epochs: 1, 
+  decay_rate: 0.8, 
+  decay_epochs: 1,
+  warmup_lr: 1e-6, 
+  warmup_epochs: 0, 
   cooldown_epochs: 0
 }
 
